--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="primaryLightColor">#ff5bff</color>
     <color name="primaryDarkColor">#9e00c5</color>
     <color name="primaryTextColor">#000000</color>
+    <color name="backgroundColor">#ffc1e3</color>
 </resources>
