made firebase work

--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -52,6 +52,7 @@
         android:layout_marginTop="@dimen/topMargin"
         android:backgroundTint="@color/primaryDarkColor"
         android:text="Log In"
+        android:onClick="logInClicked"
         android:textColor="@color/cardview_light_background"
         android:textColorHighlight="@color/primaryDarkColor"
         android:textColorHint="@color/primaryDarkColor"
@@ -61,6 +62,7 @@
         android:id="@+id/signUpButton"
         android:layout_width="@dimen/buttonWidth"
         android:layout_height="wrap_content"
+        android:onClick="signUpClicked"
         android:layout_below="@id/passwordEditText"
         android:layout_alignTop="@id/logInButton"
         android:layout_alignRight="@id/passwordEditText"
