--- a/app/src/main/res/layout/activity_select_action.xml
+++ b/app/src/main/res/layout/activity_select_action.xml
@@ -11,6 +11,7 @@
         style="@style/button"
         android:layout_width="wrap_content"
         android:layout_centerHorizontal="true"
+        android:onClick="showMemories"
         android:layout_marginTop="@dimen/marginFromTop"
         android:text="See Memories" />
 
@@ -20,6 +21,7 @@
         android:layout_width="wrap_content"
         android:layout_below="@id/seeMemoryButton"
         android:layout_centerHorizontal="true"
+        android:onClick="addMemories"
         android:layout_marginTop="@dimen/topMargin"
         android:text="Add a Memory" />
 
@@ -28,6 +30,7 @@
         style="@style/button"
         android:layout_width="wrap_content"
         android:layout_below="@id/addMemoryButton"
+        android:onClick="logOutClicked"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="@dimen/topMargin"
         android:text="Log Out" />
