added toast for add memory

--- a/app/src/main/res/layout/activity_add_memory.xml
+++ b/app/src/main/res/layout/activity_add_memory.xml
@@ -60,6 +60,7 @@
         style="@style/button"
         android:layout_width="150dp"
         android:layout_gravity="center"
+        android:onClick="addMemories"
         android:backgroundTint="@color/primaryColor"
         android:text="Add Memory" />
 
