--- a/app/src/main/res/layout/activity_add_memory.xml
+++ b/app/src/main/res/layout/activity_add_memory.xml
@@ -45,7 +45,7 @@
         android:textSize="@dimen/fontRegular" />
 
     <EditText
-        android:id="@+id/editTextTextMultiLine2"
+        android:id="@+id/memoryDesc"
         android:layout_width="match_parent"
         android:layout_height="@dimen/memEditTextDescHeight"
         android:paddingLeft="10dp"
@@ -60,7 +60,7 @@
         style="@style/button"
         android:layout_width="150dp"
         android:layout_gravity="center"
-        android:onClick="addMemories"
+        android:onClick="addMemoryButtonClicked"
         android:backgroundTint="@color/primaryColor"
         android:text="Add Memory" />
 
